# resolwe

./: .coveragerc  .gitattributes  .gitignore  .pep8rc  .pylintrc  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  django.yml  docker.yml
apps/: models.py
docs/: CHANGELOG.rst  Makefile  api.rst  composer.rst  conf.py  contributing.rst  flow.rst  index.rst  intro.rst  make.bat  overview.rst  proc.rst  ref.rst  restapi.rst  storage.rst
resolwe/: __about__.py  __init__.py  api_urls.py  composer.py  utils.py
resolwe/apps/: __init__.py  apps.py  finders.py  models.py  serializers.py  tests.py  views.py
resolwe/apps/migrations/: 0001_initial.py  0002_project_to_collection.py
resolwe/auditlog/: __init__.py  apps.py  auditmanager.py  logger.py  middleware.py  models.py
resolwe/auth/: genesis.py
resolwe/auth/fixtures/: users.json
resolwe/auth/tests/: test_project.py
resolwe/billing/: __init__.py  apps.py  cost_estimator.py  exceptions.py  models.py  signals.py
resolwe/billing/fixtures/: billing_account.yaml  billing_billing_collection.yaml  billing_collection.yaml  billing_computecost.yaml  billing_data.yaml  billing_datahistory.yaml  billing_process.yaml  billing_storage_cost.yaml  billing_storage_type_history.yaml  billing_user.yaml  real_cost.yaml
resolwe/billing/migrations/: 0001_initial.py  0002_auto_20210824_1004.py
resolwe/billing/serializers/: __init__.py  billing_account.py  cost_serializer.py
resolwe/billing/tests/: test_api.py  test_billing.py
resolwe/billing/views/: __init__.py  billing_account.py  cost_per_day.py
resolwe/db/: __init__.py
resolwe/db/postgresql/: __init__.py  base.py
resolwe/elastic/: __init__.py  apps.py  builder.py  composer.py  dependencies.py  fields.py  indices.py  lookup.py  mixins.py  pagination.py  routers.py  signals.py  viewsets.py
resolwe/elastic/management/: __init__.py
resolwe/elastic/tests/: test_composer.py  test_index.py  test_viewsets.py
resolwe/elastic/utils/: __init__.py  tests.py
resolwe/flow/: __init__.py  admin.py  apps.py  consumers.py  engine.py  exceptions.py  filters.py  finders.py  migration_ops.py  models.py  permissions.py  protocol.py  routing.py  serializers.py  settings.py  signals.py  tasks.py  tests.py  views.py
resolwe/flow/backends/: __init__.py  local.py
resolwe/flow/docker_images/: Dockerfile.communication  Readme.md
resolwe/flow/elastic_indexes/: __init__.py  base.py  collection.py  data.py  entity.py
resolwe/flow/engines/: __init__.py  base.py  celery.py  local.py
resolwe/flow/execution_engines/: __init__.py  base.py  exceptions.py
resolwe/flow/executors/: __init__.py  __main__.py  collect.py  constants.py  docker.py  global_settings.py  init_container.py  local.py  logger.py  manager_commands.py  prepare.py  protocol.py  requirements.txt  run.py  socket_utils.py  startup_communication_container.py  startup_processing_container.py  transfer.py  zeromq_utils.py
resolwe/flow/exprengines/: __init__.py
resolwe/flow/expression_engines/: __init__.py  base.py  exceptions.py
resolwe/flow/fixtures/: projects.json
resolwe/flow/management/: __init__.py
resolwe/flow/managers/: __init__.py  base.py  celery.py  consumer.py  dispatcher.py  listener.py  local.py  protocol.py  state.py  utils.py
resolwe/flow/migrations/: 0001_initial.py  0001_squashed_0030_change_slug_field.py  0001_squashed_0043_full_text_search.py  0002_project_to_collection.py  0002_set_process_owners.py  0002_squashed_0049_json_field.py  0003_add_permission_group.py  0003_auto_20211012_1134.py  0003_data_dependency_1.py  0003_support_sample.py  0004_auto_20211012_1134.py  0004_autoslug_field.py  0004_data_dependency_2.py  0004_data_process_resources.py  0005_data_dependency_3.py  0005_duplicate_data_dependency.py  0005_id_to_big_auto_field.py  0005_process_data_name.py  0006_add_descriptor_to_relation.py  0006_add_total_size.py  0006_data_named_by_user.py  0007_add_owner.py  0007_alter_data_process_rc.py  0007_data_size.py  0008_annotations.py  0008_compute_size.py  0008_fix_jsonfields.py  0009_data_parents.py  0009_make_size_mandatory.py  0009_preset_base_model.py  0009_storage_permissions.py  0010_add_secret.py  0010_annotationfield_required.py  0010_fix_jsonfields.py  0011_annotationpreset_contributor_correct_user.py  0011_calculate_checksum.py  0011_preserve_parents.py  0012_alter_relation_category.py  0012_recreate_empty_parents.py  0012_require_checksum.py  (+91 more)
resolwe/flow/models/: __init__.py  annotations.py  base.py  collection.py  data.py  descriptor.py  entity.py  fields.py  functions.py  history.py  history_manager.py  managers.py  migrations.py  process.py  secret.py  storage.py  utils.py  worker.py
resolwe/flow/serializers/: __init__.py  annotations.py  (+10 more)
resolwe/observers/: __init__.py  apps.py  consumers.py  decorators.py  mixins.py  models.py  protocol.py  routing.py  signals.py  tests.py  utils.py  views.py
resolwe/permissions/: __init__.py  apps.py  filters.py  genesis.py  loader.py  managers.py  mixins.py  models.py  permissions.py  shortcuts.py  utils.py
resolwe/perms/: genesis.py
resolwe/process/: __init__.py  __main__.py  bootstrap_python_runtime.py  communicator.py  descriptor.py  fields.py  models.py  parser.py  resources.py  runtime.py  runtimes.py  socket_utils.py
resolwe/rest/: __init__.py  fields.py  projection.py  serializers.py  tests.py
resolwe/storage/: __init__.py  apps.py  cleanup.py  consumers.py  manager.py  models.py  protocol.py  settings.py  signals.py  utils.py  views.py
resolwe/test/: __init__.py  testcases.py  tests.py  utils.py
resolwe/test_helpers/: __init__.py  test_runner.py
resolwe/toolkit/: __init__.py
tests/: .env  .gitignore  __init__.py  celery.py  celery_conf.py  compose.yaml  docker-compose.yml  manage.py  run_tests.sh  run_tests.sh.new  settings.py  test_requirements.txt  testing_credentials.tgz.enc  testing_credentials_gcs.json.enc  testing_credentials_s3.json.enc  urls.py
tests/.test_upload/: README.rst
(+303 files in other folders)
