[build-system]
requires = ["setuptools >= 78.1.0", "setuptools_scm >= 8.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resolwe"
description = "Open source enterprise dataflow engine in Django"
readme = "README.rst"
dynamic = ["version"]
authors = [{ name = "Genialis, Inc", email = "dev-team@genialis.com" }]
license = { text = "Apache License (2.0)" }
requires-python = ">=3.12, <3.15"
keywords = ["resolwe", "dataflow", "django"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "asgiref~=3.10.0",
    "asteval==1.0.6",
    "beautifulsoup4~=4.14.2",
    "channels~=4.3.1",
    "channels_redis~=4.3.0",
    # Storage requirement for computing hashes.
    "crcmod",
    "Django~=5.2.7",
    "django-fernet-fields-v2~=0.9",
    "django-filter~=25.2",
    "djangorestframework~=3.16.1",
    "docker~=7.1.0",
    "drf-spectacular~=0.29.0",
    # Required by opentelemetry-exporter, pinned due to Python 3.14.
    # TODO: Remove the pin when jsonschema updates its dependency.
    "grpcio~=1.76.0",
    "Jinja2~=3.1.6",
    "jsonschema~=4.25.1",
    "kubernetes~=34.1.0",
    "opentelemetry-api~=1.38.0",
    "opentelemetry-exporter-otlp~=1.38.0",
    "opentelemetry-sdk~=1.38.0",
    "plumbum~=1.10.0",
    "psycopg[binary]~=3.2.12",
    "python-decouple~=3.8",
    "pytz~=2025.2",
    "PyYAML~=6.0.3",
    "pyzmq~=27.1.0",
    "redis~=7.0.1",
    "shellescape~=3.8.1",
    "Sphinx~=8.2.3",
    "uvloop~=0.22.1",
    "wrapt~=2.0.0",
]


[project.optional-dependencies]
storage-s3 = ["boto3~=1.40.65", "crcmod~=1.7"]
storage-gcs = ["crcmod~=1.7", "google-cloud-storage~=3.4.1"]
docs = ["sphinx_rtd_theme ~= 3.0.2", "pyasn1>=0.6.1", "daphne>=4.2.1"]
package = ["twine ~= 6.2.0", "wheel ~= 0.45.1"]
test = [
    "black>=25.9.0",
    "check-manifest>=0.51",
    "coverage>=7.11.0",
    "daphne>=4.2.1",
    "django-filter-stubs>=0.1.3",
    "django-stubs>=5.2.7",
    #  Temporarily disabled due to compatibility issues with mypy.
    "djangorestframework-stubs[compatible-mypy]>=3.16.5",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pydocstyle>=6.3.0",
    "readme_renderer",
    "setuptools_scm",
    "tblib>=3.2.1",
    "testfixtures>=10.0.0",
    "twine~=6.2.0",
    "types-setuptools",
]

[project.urls]
Homepage = "https://github.com/genialis/resolwe/"
Documentation = "https://resolwe.readthedocs.io/en/latest/"
Repository = "https://github.com/genialis/resolwe/"


[tool.setuptools_scm]

[tool.black]
target-version = ["py312", "py313", "py314"]
# The process must be excluded: its syntax must remain Python 3.6 compatible.
exclude = "resolwe/process"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
check_untyped_defs = true
# Use of the option below is advised by open-telemetry.
namespace_packages = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.isort]
profile = "black"
